static/css/base.css
/* ... */
@media (max-width:991px)
{
  .footer [class^=col-]
  {
    margin-bottom:30px
  }
}
@media (max-width:767px)
{
  .footer
  {
    padding-bottom:0;
    text-align: center;
  }
}
.social-icons
{
  padding-left:0;
  margin-bottom:0;
  list-style:none
}
.social-icons li
{
  display:inline-block;
  margin-bottom:4px
}
.social-icons a{
  background-color:var(--second-color);
  color: var(--first-color);
  font-size:16px;
  display:inline-block;
  line-height:44px;
  width:44px;
  height:44px;
  text-align:center;
  margin-right:8px;
  border-radius:100%;
}
.social-icons a:active,.social-icons a:focus,.social-icons a:hover
{
  color:var(--second-color);
  background-color:var(--first-color);
}

@media (min-width: 1200px){
#about.container,
#security.container,
footer.container {
    max-width: 100% !important;
}
}

